2007-04-06  Roger Leigh  <rleigh@debian.org>

	* bin/csbuild/csbuild-debian-changes.h: Indent method arguments,
	and tidy.

	* bin/csbuild/csbuild-debian-changes.cc (get_value): New methods,
	specialising the generic template for value_type.

2007-04-06  Roger Leigh  <rleigh@debian.org>

	* bin/csbuild/csbuild-debian-changes.(cc|h): New class, base class
	for parsing .changes and .dsc files, based on sbuild::keyfile.

	* bin/csbuild/Makefile.am
	(csbuild_SOURCES): Add csbuild-debian-changes.(cc|h).

2007-04-05  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/schroot-base-options.h: Added actions options
	group.

	* bin/schroot-base/schroot-base-options.cc (add_option_groups):
	Add actions group to the visible and global options groups.

	* Updated all options code to use the actions group instead of the
	general group.  Added default actions to schroot and csbuild.

2007-04-05  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/50sbuild: Fix syntax error in test.

2007-04-05  Roger Leigh  <rleigh@debian.org>

	* Replace all files in bin/csbuild with schroot-releaselock
	sources, and customise for csbuild.  The standard options are
	taken from the existing sbuild implementation.

2007-04-05  Roger Leigh  <rleigh@debian.org>

	* po/POTFILES.in: Updated with new file locations.

	* Update copyright headers on files for 2007.

2007-04-05  Roger Leigh  <rleigh@debian.org>

	* test/schroot-base-option-action.cc: New file, unit test for
	schroot_base::option_action.

2007-04-05  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-base/schroot-base-option-action.h: Replace
	std::string with action_type typedef.  Add inline operator ==, !=,
	and = methods.

	* bin/schroot-base/schroot-base-option-action.cc: Replace
	std::string with action_type typedef.
	(set): If the action is set more than once, throw a
	validation_error exception.

	* bin/schroot-base/schroot-base-options.h: Add action_type typedef
	for option_action::action_type.  Add action_type constants for