@@ -17,15 +17,16 @@
  *
  *********************************************************************/
 
-#ifndef SCHROOT_LISTMOUNTS_MAIN_H
-#define SCHROOT_LISTMOUNTS_MAIN_H
+#ifndef SCHROOT_RELEASELOCK_MAIN_H
+#define SCHROOT_RELEASELOCK_MAIN_H
 
 #include <schroot-base/schroot-base-main.h>
-#include <schroot/schroot-listmounts-options.h>
+
+#include <schroot-releaselock/schroot-releaselock-options.h>
 
 #include <sbuild/sbuild-custom-error.h>
 
-namespace schroot_listmounts
+namespace schroot_releaselock
 {
 
   /**
@@ -37,9 +38,10 @@ namespace schroot_listmounts
     /// Error codes.
     enum error_code
       {
-	FIND, ///< Failed to find file.
-	OPEN, ///< Failed to open file.
-	CLOSE ///< Failed to close file.
+	DEVICE_NOTBLOCK, ///< File is not a block device.
+	DEVICE_OWNED,    ///< Failed to release device lock (lock held by PID).
+	DEVICE_RELEASE,  ///< Failed to release device lock.
+	DEVICE_STAT      ///< Failed to stat device.
       };
 
     /// Exception type.
@@ -55,23 +57,12 @@ namespace schroot_listmounts
     /// The destructor.
     virtual ~main ();
 
-  private:
     /**
-     * List mounts (internal helper).
-     *
-     * @param mountfile the file containing the database of mounted
-     * filesystems.
-     */
-    sbuild::string_list
-    list_mounts (std::string const& mountfile) const;
-
-    /**
-     * List mounts.
+     * Release lock.
      */
     virtual void
-    action_listmounts ();
+    action_releaselock ();
 
-  protected:
     /**
      * Run the program.
      *
@@ -81,14 +72,13 @@ namespace schroot_listmounts
     virtual int
     run_impl ();
 
-  private:
     /// The program options.
     options::ptr opts;
   };
 
 }
 
-#endif /* SCHROOT_LISTMOUNTS_MAIN_H */
+#endif /* SCHROOT_RELEASELOCK_MAIN_H */
 
 /*
  * Local Variables:
