@@ -443,6 +443,8 @@ AC_CONFIG_FILES([bin/schroot/setup/Makefile])
 AC_CONFIG_FILES([bin/schroot/schroot.1])
 AC_CONFIG_FILES([bin/schroot/schroot-setup.5])
 AC_CONFIG_FILES([bin/schroot/schroot.conf.5])
+AC_CONFIG_FILES([bin/schroot-listmounts/Makefile])
+AC_CONFIG_FILES([bin/schroot-releaselock/Makefile])
 AC_CONFIG_FILES([bin/dchroot/Makefile])
 AC_CONFIG_FILES([bin/dchroot/dchroot.1])
 AC_CONFIG_FILES([bin/dchroot-dsa/Makefile])
