@@ -26,16 +26,13 @@ sbuild/sbuild-log.cc
 sbuild/sbuild-util.cc
 sbuild/sbuild-chroot-source.cc
 bin/schroot/schroot-main.cc
-bin/schroot/schroot-releaselock-main.cc
-bin/schroot/schroot-releaselock-options.cc
-bin/schroot/schroot-listmounts-main.cc
-bin/schroot/schroot-listmounts-options.cc
 bin/schroot/schroot-main-base.cc
-bin/schroot/schroot-releaselock.cc
 bin/schroot/schroot-options.cc
 bin/schroot/schroot-options-base.cc
-bin/schroot/schroot-listmounts.cc
 bin/schroot/schroot.cc
+bin/schroot-listmounts/schroot-listmounts-main.cc
+bin/schroot-listmounts/schroot-listmounts-options.cc
+bin/schroot-listmounts/schroot-listmounts.cc
 bin/dchroot/dchroot-main.cc
 bin/dchroot/dchroot-session.cc
 bin/dchroot/dchroot-session-base.cc
@@ -48,9 +45,13 @@ bin/schroot-base/schroot-base-main.cc
 bin/schroot-base/schroot-base-options.cc
 bin/csbuild/csbuild-main.cc
 bin/csbuild/csbuild-options.cc
+bin/csbuild/csbuild-debian-changes.cc
 bin/csbuild/csbuild.cc
 bin/dchroot-dsa/dchroot-dsa.cc
 bin/dchroot-dsa/dchroot-dsa-main.cc
 bin/dchroot-dsa/dchroot-dsa-chroot-config.cc
 bin/dchroot-dsa/dchroot-dsa-session.cc
 bin/dchroot-dsa/dchroot-dsa-options.cc
+bin/schroot-releaselock/schroot-releaselock-main.cc
+bin/schroot-releaselock/schroot-releaselock-options.cc
+bin/schroot-releaselock/schroot-releaselock.cc
